# YAopenvfD

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: c-cpp.yml
include/: cli.h  collector.h  common.h  dots.h  glyphs.h  openvfd.h  reporter.h  util.h  version.h  watcher.h
include/collector/: cpu.h  date.h  io.h  net.h  size.h  string.h  temp.h
include/glyphs/: char.h  displays.h  positions.h  setup.h
include/glyphs/char/: digits.h  lowercases.h  puntuations.h  uppercases.h
include/openvfd/: glyphs.h  openvfd_drv.h
pacakge/: YAopenvfD.conf
package/: README.md
src/: cli.c  collector.c  dots.c  glyphs.c  main.c  openvfd.c  reporter.c  util.c  version.c  watcher.c
src/collector/: cpu.c  date.c  io.c  net.c  size.c  string.c  temp.c
systemd/: YAopenvfD-modloader.service  YAopenvfD-modloader.sh  YAopenvfD-updater.service  YAopenvfD.conf
